More color changes and bug squashing

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -3,21 +3,23 @@ body {
     margin: 0;
     padding: 20px;
     text-align: center;
+    background-color: #2b2b2f;
   }
 
   h1 {
-    color: darkblue;
+    color: #7ac142;
     font-size: 40px;
     text-align: center;
   }
 
   p {
+    color: white;
     font-size: 18px;
   }
 
   .github-link {
     display: inline-block;
-    background-color: #8A2BE2;
+    background-color: #0093d0;
     color: white;
     padding: 10px 20px;
     text-decoration: none;
@@ -26,5 +28,5 @@ body {
   }
 
   .github-link:hover {
-    background-color:  #A74AC7;
+    background-color:  #003366;
   }
